samples/_failures_safe/1761129555_4bc223_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c883d33.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9c883d33.c:176:5: error: expected declaration or statement at end of input
  176 |     int token_count = 0;
      |     ^~~
